# blog-bubbles-api

./: Dockerfile  Dockerfile.prod  LICENSE  README.md  aerich.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: prod.yaml
app/: database.py  main.py
app/core/: config.py  models.py
auth/: exceptions.py  helpers.py  schemas.py
auth/api/: v1.py
auth/models/: __init__.py  user.py
data/: schemas.py
data/api/: v1.py
data/models/: __init__.py  comments.py  positionalData.py  urls.py
docs/: changePassword.mermaid  createComment.mermaid  database.dbml  deleteComment.mermaid  environmentVarsables.md  getComments.mermaid  localEnvironmentSetup.md  login.mermaid  register.mermaid  validateToken.mermaid
migrations/models/: 0_20230905163634_init.py  0_20230907105852_init.py  0_20230907120640_init.py  0_20230907231423_init.py  1_20230905141346_None.py  2_20220209153751_None.sql  2_20230905161526_added_name.py
