[tool.poetry]
name = "blog-bubbles-api"
version = "0.1.0"
description = ""
authors = ["Rohit Jha <me@rjha.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
