[tool.poetry]
name = "blog-bubbles-api"
version = "0.1.0"
description = ""
authors = ["Rohit Jha <me@rjha.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
tortoise-orm = "^0.20.0"
asyncpg = "^0.28.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
aerich = "^0.7.2"
pydantic-settings = "^2.0.3"
pydantic = "^2.3.0"
email-validator = "^2.0.0.post2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"


[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
